rnsc/test_data/rns_integration/error/parser/class_header/access_flags/private.rns
.class private HelloWorld
.super java/lang/Object
.class_end
